src/objects/Product_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Feedback</relationshipLabel>
        <relationshipName>Product_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Type2__c</fullName>
        <formula>Text( Contact__r.Account.Company_Type__c )</formula>
        <label>Company Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>Company Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Company_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Axiometrics</fullName>
                </value>
                <value>
                    <fullName>BAML</fullName>
                </value>
                <value>
                    <fullName>Bloomberg</fullName>
                </value>
                <value>
                    <fullName>Broker Provided Information</fullName>
                </value>
                <value>
                    <fullName>Burgiss</fullName>
                </value>
                <value>
                    <fullName>Capital One</fullName>
                </value>
                <value>
                    <fullName>CBRE</fullName>
                </value>
                <value>
                    <fullName>Citi</fullName>
                </value>
                <value>
                    <fullName>CompStak</fullName>
                </value>
                <value>
                    <fullName>CoStar</fullName>
                </value>
                <value>
                    <fullName>Datscha</fullName>
                </value>
                <value>
                    <fullName>Estates Gazette</fullName>
                </value>
                <value>
                    <fullName>FERI</fullName>
                </value>
                <value>
                    <fullName>GeoPhy</fullName>
                </value>
                <value>
                    <fullName>I don&apos;t know</fullName>
                </value>
                <value>
                    <fullName>ISI</fullName>
                </value>
                <value>
                    <fullName>Jefferies</fullName>
                </value>
                <value>
                    <fullName>JPM</fullName>
                </value>
                <value>
                    <fullName>Kempen</fullName>
                </value>
                <value>
                    <fullName>Keybanc</fullName>
                </value>
                <value>
                    <fullName>Kroll Bond Rating</fullName>
                </value>
                <value>
                    <fullName>Moody&apos;s</fullName>
                </value>
                <value>
                    <fullName>Morgan Stanley</fullName>
                </value>
                <value>
                    <fullName>MSCI</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PMA</fullName>
                </value>
                <value>
                    <fullName>PropertyEU</fullName>
                </value>
                <value>
                    <fullName>Property Week</fullName>
                </value>
                <value>
                    <fullName>RCA</fullName>
                </value>
                <value>
                    <fullName>REIS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact this piece of feedback is associated with</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Feedback</relationshipLabel>
        <relationshipName>Product_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description_of_Feedback__c</fullName>
        <description>Description of the feedback</description>
        <inlineHelpText>Please be as detailed as possible</inlineHelpText>
        <label>Description of Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_Type__c</fullName>
        <label>Feedback Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product Feedback</fullName>
                </value>
                <value>
                    <fullName>Report Feedback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <defaultValue>&quot;WP1&quot;</defaultValue>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WP1</fullName>
                </value>
                <value>
                    <fullName>Legacy</fullName>
                    <isActive>false</isActive>
                    <label>Legacy</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Trying to tie product feedback to the product</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Feedback</relationshipLabel>
        <relationshipName>Product_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>What Product line is this feedback regarding?</description>
        <inlineHelpText>What Product line is this feedback regarding?</inlineHelpText>
        <label>Product</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Feedback_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Products</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Publish_Date__c</fullName>
        <label>Report Publish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_Title__c</fullName>
        <label>Report Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sectors__c</fullName>
        <label>Sectors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sectors</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_Feedback__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Feedback_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>Bug</fullName>
                </value>
                <value>
                    <fullName>Coverage</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>Functionality</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Macro</fullName>
                </value>
                <value>
                    <fullName>Insights</fullName>
                </value>
                <value>
                    <fullName>Sector</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Market</fullName>
                </value>
                <value>
                    <fullName>REA</fullName>
                </value>
                <value>
                    <fullName>CMA</fullName>
                </value>
                <value>
                    <fullName>ABA</fullName>
                </value>
                <value>
                    <fullName>HFA</fullName>
                </value>
                <value>
                    <fullName>React News</fullName>
                </value>
                <value>
                    <fullName>News</fullName>
                    <isActive>false</isActive>
                    <label>News</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <label>Use Case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Description_of_Feedback__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Sutton</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Feedback Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Feedback</pluralLabel>
    <recordTypes>
        <fullName>Product_Feedback</fullName>
        <active>true</active>
        <label>Product Feedback</label>
    </recordTypes>
    <recordTypes>
        <fullName>Report_Feedback</fullName>
        <active>true</active>
        <label>Report Feedback</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Require_Product_Feedback_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Feedback_Type__c,&quot;Product Feedback&quot;),
ISBLANK(Contact__c))</errorConditionFormula>
        <errorDisplayField>Contact__c</errorDisplayField>
        <errorMessage>You must fill in the Contact for Product Feedback.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Report_Feedback_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Feedback_Type__c,&quot;Report Feedback&quot;),
OR(
NOT(ISBLANK(Contact__c)),
ISBLANK(Report_Title__c),
ISBLANK(Report_Publish_Date__c )))</errorConditionFormula>
        <errorMessage>You must fill in Report Title and Report Publish Date and Contact must be blank for Report Feedback.</errorMessage>
    </validationRules>
</CustomObject>